--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^12.20.6",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.2",
+    "axios": "^0.21.1",
     "esbuild": "^0.9.6",
     "esbuild-wasm": "^0.9.6",
     "react": "^17.0.1",
