prettier code format in monaco editor done

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.8.3",
     "@types/jest": "^26.0.21",
     "@types/node": "^12.20.6",
+    "@types/prettier": "^2.2.3",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.2",
     "axios": "^0.21.1",
@@ -16,6 +17,7 @@
     "esbuild-wasm": "^0.9.6",
     "localforage": "^1.9.0",
     "monaco-editor": "^0.23.0",
+    "prettier": "^2.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
