--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/prettier": "^2.2.3",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.2",
+    "@types/react-resizable": "^1.7.2",
     "axios": "^0.21.1",
     "esbuild": "^0.9.6",
     "esbuild-wasm": "^0.9.6",
@@ -21,6 +22,7 @@
     "prettier": "^2.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-resizable": "^1.11.1",
     "react-scripts": "4.0.3",
     "typescript": "^4.2.3",
     "web-vitals": "^1.1.1"
