--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/prettier": "^2.2.3",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.2",
+    "@types/react-redux": "^7.1.16",
     "@types/react-resizable": "^1.7.2",
     "@uiw/react-md-editor": "2.1.1",
     "axios": "^0.21.1",
@@ -23,8 +24,11 @@
     "prettier": "^2.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.3",
     "react-resizable": "^1.11.1",
     "react-scripts": "4.0.3",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "typescript": "^4.2.3",
     "web-vitals": "^1.1.1"
   },
