--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^0.21.1",
     "esbuild": "^0.9.6",
     "esbuild-wasm": "^0.9.6",
+    "immer": "^9.0.1",
     "localforage": "^1.9.0",
     "monaco-editor": "^0.23.0",
     "prettier": "^2.2.1",
