--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "immer": "^9.0.1",
     "localforage": "^1.9.0",
     "monaco-editor": "^0.23.0",
+    "nanoid": "^3.1.22",
     "prettier": "^2.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
