--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "^17.0.2",
     "@types/react-redux": "^7.1.16",
     "@types/react-resizable": "^1.7.2",
+    "@types/react-router-dom": "^5.1.7",
     "@uiw/react-md-editor": "2.1.1",
     "axios": "^0.21.1",
     "esbuild": "^0.9.6",
@@ -29,6 +30,7 @@
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.3",
     "react-resizable": "^1.11.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
